[metadata]
name = singer-helpers
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kingalban/singer-helpers
author = Alban King
author_email = kingalban@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    jsonschema
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    select-streams = select_streams:main
    validate-json = validate_json:main

[options.extras_require]
dev =
    pre-commit
